Upgrade FatFs to R0.15
FatFs 0.15 has no way to force specific FAT type, opt.fmt serves as
a hint to possible types. Trying to preserve the meaning of the
original --fatNN switches.
NOTE: --fat12 and --fat16 are now the same

configure update -- explicitly enable large file support for mingw

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([hdfmonkey], [0.4], [matt@west.co.tt])
+AC_INIT([hdfmonkey], [0.5], [matt@west.co.tt])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_CANONICAL_HOST
 AC_PROG_CC
@@ -6,6 +6,7 @@ AC_PROG_CC
 case "$host_os" in
   mingw32*)
     AC_DEFINE([COMPAT_WIN32], 1, [Defined if needs Windows compatibility])
+    AC_SYS_LARGEFILE
     ;;
 esac
 
